Handle user modules on the module path